tests/snapshots/examples_fixtures/perf__complexity_scaling.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/perf/complexity_scaling.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `unwrap`.

  examples/perf/complexity_scaling.flx:12:50
   |
12 |             bench_list_head(lst, reps - 1, acc + unwrap(first(lst)))
   |                                                  ^^^^^^

Hint:
  Define it first: let unwrap = ...;


error[E004]: Undefined Variable

I can't find a value named `unwrap`.

  examples/perf/complexity_scaling.flx:20:52
   |
20 |             bench_array_first(arr, reps - 1, acc + unwrap(first(arr)))
   |                                                    ^^^^^^

Hint:
  Define it first: let unwrap = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/perf/complexity_scaling.flx:53:23
   |
53 |             let arr = range(0, n)
   |                       ^^^^^

Hint:
  Define it first: let range = ...;


Note: Downstream Errors Suppressed

I hid 9 later-stage diagnostics (9 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.

Found 3 errors.
== stdout ==
<not executed>
